# unity-agentic-tools

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  hooks.json  marketplace.json  mcp-server-direct.ts  mcp-server.mjs  mcp-server.ts  package-lock.json  package.json  skills-lock.json  tsconfig.build.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: README.md
.jules/: sentinel.md
agents/: unity-analyst.md  unity-editor.md  unity-scanner.md
commands/: asset-show.md  docs-index.md  edit.md  editor-log.md  initial-install.md  inspect.md  prefab-get.md  prefab-list.md  scene-get.md  uninstall.md  unity-asset-get.toml  unity-asset-show.toml  unity-edit-value.toml  unity-index-docs.toml  unity-inspect.toml  unity-list-hierarchy.toml  unity-prefab-find.toml  unity-prefab-get.toml  unity-prefab-list.toml  unity-scene-find.toml  unity-scene-get.toml  unity-search-docs.toml  unity-yaml-list.toml
doc-indexer/: package-lock.json  (+4 more)
rust-core/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
rust-core/npm/darwin-arm64/: package.json
rust-core/npm/darwin-x64/: package.json
rust-core/npm/linux-x64-gnu/: package.json
rust-core/npm/win32-x64-msvc/: package.json
rust-core/src/: embeddings.rs  lib.rs  walker.rs
rust-core/src/common/: mod.rs  types.rs
rust-core/src/csharp/: dll_reader.rs  mod.rs
rust-core/src/indexer/: chunker.rs  mod.rs  storage.rs  tokenizer.rs
rust-core/src/scanner/: component.rs  config.rs  gameobject.rs  mesh.rs  mod.rs  parser.rs  prefab.rs
(+301 files in other folders)
