[package]
name = "unity-file-tools"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Unity YAML parser with napi-rs bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs for Node.js bindings
napi = { version = "2", features = ["full"] }
napi-derive = "2"

# Performance
memmap2 = "0.9"
rayon = "1.10"

# File walking
walkdir = "2"

# Parsing
regex = "1.11"

# PE / .NET DLL parsing
goblin = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embeddings
fastembed = "4"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
